# acurast-substrate

./: .dockerignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.benchmark  Makefile  README.md  acurast-gen-state  acurast-gen-wasm  acurast-spec-raw.json  rust-toolchain  rust-toolchain.toml  toolchain.toml
acurast-primitives/xcm/: Cargo.toml
acurast-primitives/xcm/src/: assets.rs  lib.rs
emulations/: Cargo.toml
emulations/payments-emulation/: Cargo.toml
emulations/payments-emulation/src/: lib.rs
emulations/payments-emulation/src/tests/: jobs.rs  network_tests.rs  statemint_backed_native_assets.rs
emulations/setup/: Cargo.toml
emulations/src/: lib.rs  relay_chain.rs
emulations/src/tests/: jobs.rs
gear/ibc/: Cargo.toml
gear/ibc/app/: Cargo.toml
gear/ibc/app/src/: lib.rs  service.rs  storage.rs  types.rs  utils.rs
gear/ibc/wasm/: .binpath  Cargo.toml  app.idl  build.rs
gear/ibc/wasm/src/: lib.rs
ink/consumer/: Cargo.toml  lib.rs
ink/core/: Cargo.toml  types.rs
ink/ibc-ink-5/: Cargo.toml  lib.rs
ink/proxy/: Cargo.toml  lib.rs
node/: Cargo.toml
node/src/: block_verifier.rs  chain_spec.rs  cli.rs  client.rs  command.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: dev.rs  kusama.rs  local.rs  mainnet.rs  mod.rs  rococo.rs
p256-crypto/: Cargo.toml  README.md
p256-crypto/src/: application_crypto.rs  core.rs  lib.rs  multi_signature.rs
pallets/acurast/: Cargo.toml  README.md
pallets/acurast/common/: Cargo.toml
pallets/acurast/common/src/: attestation.rs  ibc_message.rs  lib.rs  tests.rs  traits.rs  types.rs
pallets/acurast/p384/: Cargo.toml
pallets/acurast/p384/benches/: field.rs  scalar.rs
pallets/acurast/p384/ecdsa/: Cargo.toml
pallets/acurast/p384/src/: arithmetic.rs  ecdh.rs  ecdsa.rs  lib.rs
pallets/acurast/src/: application_crypto.rs  benchmarking.rs  crypto.rs  functions.rs  lib.rs  migration.rs  mock.rs  multi_primitives.rs  multi_signature.rs  primitives.rs  secp256r1.rs  tests.rs  traits.rs  utils.rs  weights.rs
pallets/acurast/src/application_crypto/: secp256r1.rs
pallets/acurast/src/core/: secp256r1.rs
pallets/assets-manager/: Cargo.toml
pallets/assets-manager/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  stub.rs  tests.rs  weights.rs
pallets/compute/: Cargo.toml
pallets/compute/src/: benchmarking.rs  datastructures.rs  functions.rs  hooks.rs  lib.rs  migration.rs  mock.rs  reward.rs  staking.rs  stub.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/compute/src/datastructures/: memory_buffer.rs  provisional_buffer.rs  sliding_buffer.rs
pallets/compute/src/tests/: mod.rs  test_actions.rs
pallets/fee-manager/: Cargo.toml
pallets/fee-manager/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/fulfillment-receiver/: Cargo.toml  README.md
pallets/fulfillment-receiver/src/: benchmarking.rs  lib.rs  mock.rs  stub.rs  tests.rs  traits.rs  types.rs
pallets/hyperdrive/: Cargo.toml
pallets/hyperdrive-ibc/: Cargo.toml
pallets/hyperdrive-ibc/src/: benchmarking.rs  instances.rs  lib.rs  mock.rs  stub.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/hyperdrive-outgoing/: Cargo.toml
pallets/hyperdrive-outgoing/src/: benchmarking.rs  chain.rs  default_weights.rs  lib.rs  mock.rs  rpc.rs  stub.rs  tests.rs  traits.rs  types.rs  utils.rs
pallets/hyperdrive-outgoing/src/mmr/: mmr.rs  (+2 more)
pallets/hyperdrive/src/: benchmarking.rs  chain.rs  ethereum_tests.rs  instances.rs  lib.rs  mock.rs  stub.rs  substrate_tests.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/marketplace/: Cargo.toml  README.md
pallets/marketplace/reputation/: Cargo.toml
pallets/marketplace/src/: benchmarking.rs  error.rs  functions.rs  hooks.rs  lib.rs  match_checker.rs  migration.rs  mock.rs  payments.rs  rpc.rs  stub.rs  tests.rs  traits.rs  types.rs  utils.rs  weights.rs
pallets/parachain-staking/: Cargo.toml  README.md
pallets/parachain-staking/src/: auto_compound.rs  benchmarks.rs  delegation_requests.rs  hooks.rs  inflation.rs  lib.rs  migrations.rs  mock.rs  set.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/processor-manager/: Cargo.toml
pallets/processor-manager/src/: benchmarking.rs  functions.rs  lib.rs  migration.rs  mock.rs  onboarding.rs  rpc.rs  stub.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/rewards-treasury/: Cargo.toml
pallets/rewards-treasury/src/: lib.rs  mock.rs  stub.rs  tests.rs
pallets/test-pallet/: Cargo.toml
pallets/test-pallet/src/: lib.rs
pallets/token-claim/: Cargo.toml
pallets/token-claim/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/token-conversion/: Cargo.toml
pallets/token-conversion/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/vesting/: Cargo.toml
pallets/vesting/src/: benchmarking.rs  lib.rs  mock.rs  stub.rs  tests.rs  traits.rs  types.rs
pallets/xcm-assets/: Cargo.toml
pallets/xcm-assets/src/: lib.rs
runtime/: Cargo.toml
runtime/acurast/: Cargo.toml
runtime/acurast-kusama/: Cargo.toml
runtime/acurast-kusama/src/: apis.rs  benchmarking.rs  constants.rs  lib.rs  pallets.rs  types.rs  upgrades.rs  utils.rs  weight.rs  weights.rs  xcm_config.rs
runtime/acurast-mainnet/: Cargo.toml
runtime/acurast-mainnet/src/: apis.rs  benchmarking.rs  check_nonce.rs  constants.rs  lib.rs  pallets.rs  types.rs  utils.rs  vesting_migration.rs  xcm_config.rs
runtime/acurast-rococo/: Cargo.toml
runtime/acurast-rococo/src/: apis.rs  benchmarking.rs  check_nonce.rs  constants.rs  implementations.rs  lib.rs  pallets.rs  types.rs  utils.rs  xcm_config.rs
runtime/acurast/src/: benchmarking.rs  lib.rs  xcm_config.rs
runtime/common/: Cargo.toml
runtime/common/src/: barrier.rs  check_nonce.rs  consensus.rs  constants.rs  lib.rs  migrations.rs  onboarding.rs  types.rs  utils.rs  weight.rs
runtime/src/: benchmarking.rs  constants.rs  lib.rs  xcm_adapters.rs  xcm_config.rs
runtime/src/weights/: mod.rs  pallet_acurast_hyperdrive_outgoing_weights.rs  xcm_assets_weights.rs
(+391 files in other folders)
