[profile.release]
panic = "unwind"

[workspace]
resolver = "1"
members = [
	"node",
	"emulations",
	"examples/proxy-parachain/node",
]

[workspace.package]
authors = [ "Papers AG" ]
repository = "https://github.com/acurast"
version = "0.4.3"

[workspace.dependencies]
# build dependencies
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }

clap = { version = "4.0.29", features = ["derive"] }
parity-scale-codec = { version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
hex-literal = { version = "0.3.4" }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }
smallvec = "1.10.0"
derive_more = "0.99.17"
serde = { version = "1.0.151", features = ["derive"] }
jsonrpsee = { version = "0.16.2", features = ["server"] }
async-trait = "0.1.57"
cfg-if = "1.0.0"

# Base pallet of the acurast protocol, it is used for registering jobs.
pallet-acurast = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# The Marketplace pallet contains the economic logic for assigning processors to jobs and pay the respective rewards.
pallet-acurast-marketplace = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# This pallet may be removed in favor of "pallet-acurast-rewards-treasury", currently it holds the fees from the Acurast Marketplace.
pallet-acurast-fee-manager = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# The Processor Manager pallet holds and manages information about each manager and its processors.
pallet-acurast-processor-manager = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# The Hyperdrive pallet is responsible to aggregate data and generate proofs of messages being sent to other chains.
pallet-acurast-hyperdrive = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# The Hyperdrive Outgoing pallet is responsible for aggregating data and generating proofs of messages being sent to other chains.
pallet-acurast-hyperdrive-outgoing = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# The Reputation pallet handles the reputation of processors.
acurast-reputation = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# The Parachain Staking pallet is the main component for the Proof of Stake consensus
# mechanism, it is responsible for selecting candidates, distribute rewards, etc...
pallet-parachain-staking = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# The Collator Selection pallet is used to select collators for the parachain. (PoA)
pallet-collator-selection = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
# The Rewards Treasury pallet is responsible to hold and manage the protocol rewards.
pallet-acurast-rewards-treasury = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
acurast-p256-crypto = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }
pallet-acurast-vesting = { git = "https://github.com/Acurast/acurast-core.git", default-features = false, tag = "acurast-v0.2.4" }

# Nimbus (Pallets and Primitives) used in the Proof of Stake consensus implementation.
nimbus-consensus = { git = "https://github.com/acurast/nimbus", default-features = false, branch = "polkadot-v1.1.0" }
nimbus-primitives = { git = "https://github.com/acurast/nimbus", default-features = false, branch = "polkadot-v1.1.0" }
pallet-author-inherent = { git = "https://github.com/acurast/nimbus", default-features = false, branch = "polkadot-v1.1.0" }

acurast-runtime-common = { path = "runtime/common", default-features = false }
acurast-rococo-runtime = { path = "runtime/acurast-rococo", default-features = false }
acurast-kusama-runtime = { path = "runtime/acurast-kusama", default-features = false }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# The Aura pallet extends Aura consensus by managing offline reporting.
# Currently used in Kusama runtime, which currently uses a Proof of Authority consensus.
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# The Authorship pallet tracks the current author of the block and its recent uncles.
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# The Balances pallet provides functionality for handling accounts and balances.
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# The Session pallet allows collators to manage their session keys, provides a function for changing the session length, and handles session rotation.
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# The Sudo pallet allows for a single account (called the "sudo key") to execute dispatchable functions that require a Root call.
# Only one account can be the sudo key at a time.
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# The Democracy pallet handles the administration of general stakeholder voting
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# The Timestamp pallet is the recommended way to query the on-chain time instead of using an approach based on block numbers.
# It uses inherents for timestamp data, which is provided by the block author and validated/verified by other validators.
# The timestamp can be set only once per block and must be set each block.
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# This 2 pallets provide the basic logic needed to pay the absolute minimum amount needed for a transaction to be included in a block.
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# A pallet simple used to assigning unique identifiers.
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
# This pallet is used to support multisig accounts, allowing multiple signed origins (accounts)
# to coordinate and dispatch calls from a well-known origin, derivable deterministically from a
# set of account IDs that must approve it
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }

frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
try-runtime-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }

# Polkadot
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
polkadot-parachain = { package = "polkadot-parachain-bin", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }

polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false,  tag = "polkadot-v1.1.0" }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }

cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.1.0" }

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

# TODO: remove once tokenomics are ready
[patch."https://github.com/paritytech/polkadot-sdk"]
frame-support-procedural = { path = "./frame/support/procedural" }

# TODO: Temporary workaround (https://substrate.stackexchange.com/questions/9870)
[patch.crates-io]
parity-scale-codec = { git = "https://github.com/paritytech/parity-scale-codec.git", tag = "v3.6.5" }

[patch.'https://github.com/Acurast/acurast-core']
acurast-common = { path = "../acurast-core/pallets/acurast/common" }
pallet-acurast = { path = "../acurast-core/pallets/acurast" }
pallet-acurast-marketplace = { path = "../acurast-core/pallets/marketplace" }
pallet-acurast-fee-manager = { path = "../acurast-core/pallets/fee-manager" }
acurast-p256-crypto = { path = "../acurast-core/p256-crypto" }
pallet-acurast-assets-manager = { path = "../acurast-core/pallets/assets-manager" }
pallet-acurast-processor-manager = { path = "../acurast-core/pallets/processor-manager" }
pallet-acurast-hyperdrive = { path = "../acurast-core/pallets/hyperdrive" }
pallet-acurast-hyperdrive-outgoing = { path = "../acurast-core/pallets/hyperdrive-outgoing" }
pallet-acurast-fulfillment-receiver = { path = "../acurast-core/pallets/fulfillment-receiver" }
pallet-acurast-vesting = { path = "../acurast-core/pallets/vesting" }
acurast-reputation = { path = "../acurast-core/pallets/marketplace/reputation" }
pallet-parachain-staking = { path = "../acurast-core/pallets/parachain-staking" }
pallet-collator-selection = { path = "../acurast-core/pallets/collator-selection" }
pallet-acurast-rewards-treasury = { path = "../acurast-core/pallets/rewards-treasury" }
